--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,6 +1,6 @@
 .about {
   height: 650px;
-  padding-top: 10px;
+  padding-top: 13px;
   position: relative;
 
   .about-content {
@@ -12,7 +12,7 @@
     margin: auto;
     filter: none;
   
-    p.join {
+    p.right {
       text-align: right;
     }
   }
@@ -30,26 +30,29 @@
   filter: brightness(30%);
 }
 
-// Media query
 
-@media (width <= 575px) {
+
+@media only screen and (max-width: 768px) {
   .about {
-    height: 350px;
+    height: auto;
+    padding-top: 10px;
+  }
 
-    .about-content {
-      font-size: 16px;
-      width: 300px;
-    }
+  .about-content p {
+    width: 90%; 
+    font-size: 11px; 
+    flex-wrap: wrap;
+  }
+
+  .about::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    background-size: cover; 
+    filter: brightness(30%);
   }
 }
-
-@media (width >= 576px) and (width <= 768px) {
-  .about {
-    height: 400px;
-
-    .about-content {
-      font-size: 16px;
-      width: 400px;
-    }
-  }
-}
+  
