--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,6 +1,5 @@
 nav {
-  background-color: #000;
-  padding: 20px;
+  background-color: #000000;
   color: $color-light;
 }
 
@@ -9,6 +8,10 @@ nav {
   background-size: cover;
 }  
 
+.main-nav {
+  padding-top: 25px;
+}
+
 .main-nav a {
     color: $color-middle;
     text-decoration: none;
@@ -16,8 +19,8 @@ nav {
     font-weight: 300;
     text-transform: uppercase;
     margin-right: 20px;
-    font-size: 18px;
-    padding-top: 60px;
+    font-size: 15px;
+    padding-top:  150px;
 }
 
 .logo {
@@ -36,23 +39,38 @@ nav {
   filter: brightness(30%);
 }
 
-.text-photo {
+.text-photo{
     color: $color-middle;
     line-height: 25px;
     position: absolute;
     top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
+    flex-wrap: wrap;
 
+  .left {
+    font-size: 70px;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    text-align: center;
+    padding-right: 250px;
+    padding-bottom: 40px;
+    margin-bottom: 50px;
+  }
+}
+   .text-photo .right {
+    font-size: 70px;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    text-align: center;
+    padding-left: 600px;
+}
+  
   .text-photo ::after {
     position: absolute;
     content: '';
     bottom: -10px;
-    left: 50%;
+    left: 60%;
     width: 180px;
     height: 4px;
-    transform: translateX(-50%);
     background: $color-middle;
   }
 
@@ -60,18 +78,107 @@ nav {
     color: $color-middle;
     position: absolute;
     top: 80%;
-    left: 45%;
+    left: 46%;
 
     h2 {
-        font-size: 22px;
+        font-size: 25px;
         font-weight: 400;
         text-transform: uppercase;
         letter-spacing: 5px;
-        margin: 0 auto;
+        position: absolute;
+        left: 45px;
+        
 
-        i {
+        .icon-arrow {
             font-size: 20px;
             color: $color-light;
         }
     }
   }
+
+@media only screen and (max-width: 767px) {
+  .nav {
+      padding: 10px;
+  }
+  .header {
+      height: 500px;
+  }
+  .main-nav a {
+      font-size: 16px;
+      padding-top: 100px;
+  }
+  .header img {
+     
+      width: 100%;
+  }
+  .text-photo {
+      top: 30%; 
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+  }
+  .text-photo .left,
+  .text-photo .right {
+      display: block;
+      text-align: center; 
+      padding: 0; 
+      margin: 0 auto;
+  }
+  .text-photo .left {
+      font-size: 30px; 
+      margin-bottom: 30px; 
+  }
+  .text-photo .right {
+      font-size: 20px; 
+      padding-top: 30px;
+      margin-left: 10px;
+  }
+  .icon-text h2 {
+      display: none;
+  }
+  .text-photo ::after {
+    display: none;
+    width: 0 px; 
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .nav {
+      padding: 15px;
+  }
+  .header {
+      height: 500px;
+      width: 100%;
+  }
+  .main-nav a {
+      font-size: 16px;
+      padding-top: 120px;
+  }
+  .header img {
+      height: 500px; 
+  }
+  .text-photo {
+      top: 20%; 
+      left: 30%;
+  }
+  .text-photo .left,
+  .text-photo .right {
+      display: block; 
+      text-align: center; 
+      padding: 0; 
+  }
+  .text-photo .left {
+      font-size: 30px; 
+      padding-bottom: 20px; 
+  }
+  .text-photo .right {
+      font-size: 30px; 
+      padding-top: 20px; 
+  }
+  .icon-text h2 {
+      display: none
+  }
+  .text-photo ::after {
+    display: none;
+  }
+}
