--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -16,6 +16,7 @@
     color: $color-middle;
     letter-spacing: 5px;
     font-weight: 200;
+
   }
 
   .title ::after {
@@ -32,24 +33,31 @@
 
   .products {
     margin-bottom: 50px;
-    margin-top: 50px;
+    margin-top: 60px;
   }
   
-  .products:nth-child(even){
-    .row{
+  .products:nth-child(even) {
+    .row {
       flex-direction: row-reverse;
+      padding-left: 30px;
+    }
+  
+     .product-content {
+      left: 60%;
+      flex-wrap: wrap;
+      
     }
   }
   
   .product-content {
-    border-color: #fff;
     height: 300px;
     position: relative;
+    left: 30px;
   
     .product__name {
       font-size: 30px;
-      font-weight: $font-bold;
-      letter-spacing: 1px;
+      font-weight: bold;
+      letter-spacing: 2px;
     }
   
     .product__name::after {
@@ -64,13 +72,14 @@
     }
   
     .product__description {
-      font-size: 10px;
+      font-size: 11px;
       font-weight: $font-semibold;
       max-width: 220px;
       position: absolute;
       top: 72px;
       left: 100px;
     }
+    
   
     .details {
       line-height: 0.5;
@@ -92,9 +101,10 @@
     box-shadow: black;
   }
   
-  // Media query
+
   
   @media (width >= 576px) and (width <= 768px) {
+   
     .product-content {
       height: 200px;
   
@@ -115,5 +125,12 @@
       .details {
         top: 130px;
       }
+       .product-content {
+        margin: 0 auto;
+        flex-wrap: wrap;
+        
+      }
     }
   }
+    
+  
