--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -8,12 +8,13 @@
     color: $color-light;
     font-style: italic;
     font-size: 22px;
-    width: 500px;
+    width: 450px;
     margin: auto;
     filter: none;
   
     p.right {
       text-align: right;
+      padding-bottom: 20px;
     }
   }
 }
@@ -35,19 +36,19 @@
 @media only screen and (max-width: 768px) {
   .about {
     height: auto;
-    padding-top: 10px;
   }
 
   .about-content p {
     width: 90%; 
-    font-size: 11px; 
+    font-size: 16px; 
     flex-wrap: wrap;
+    margin: 35px;
+    
   }
 
   .about::before {
     content: "";
     position: absolute;
-    top: 0;
     left: 0;
     width: 100%; 
     height: 100%; 
